--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
 
 <h2>Portfolio</h2>
 
-<p>Click Here<br><a href="221710308038_Resume.pdf" target="_blank">Resume</a></p>
+<p>Click Here<br><a href="Bineeth.pdf" target="_blank">Resume</a></p>
 
 <h3>GitHub: <a href="https://github.com/bineethreddy25" target="_blank">https://github.com/bineethreddy25</a></h3>
 
